--- a/siruseri.html
+++ b/siruseri.html
@@ -1,91 +1,65 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Leaflet GeoJSON Example</title>
-	<meta charset="utf-8" />
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<link rel="stylesheet" href="../dist/leaflet.css" />
+<title>Siruseri</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<style type="text/css">
+body {
+padding: 0;
+margin: 0;
+}
+html, body, #map {
+height: 100%;
+}
+</style>
 </head>
 <body>
-	<div id="map" style="width: 600px; height: 400px"></div>
-
-	<script src="sample-geojson.js" type="text/javascript"></script>
-	<script src="../dist/leaflet.js"></script>
-
-	<script>
-		var map = L.map('map').setView([39.74739, -105], 13);
-
-		L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'examples.map-20v6611k'
-		}).addTo(map);
-
-		var baseballIcon = L.icon({
-			iconUrl: 'baseball-marker.png',
-			iconSize: [32, 37],
-			iconAnchor: [16, 37],
-			popupAnchor: [0, -28]
-		});
-
-		function onEachFeature(feature, layer) {
-			var popupContent = "<p>I started out as a GeoJSON " +
-					feature.geometry.type + ", but now I'm a Leaflet vector!</p>";
-
-			if (feature.properties && feature.properties.popupContent) {
-				popupContent += feature.properties.popupContent;
-			}
-
-			layer.bindPopup(popupContent);
-		}
-
-		L.geoJson([bicycleRental, campus], {
-
-			style: function (feature) {
-				return feature.properties && feature.properties.style;
-			},
-
-			onEachFeature: onEachFeature,
-
-			pointToLayer: function (feature, latlng) {
-				return L.circleMarker(latlng, {
-					radius: 8,
-					fillColor: "#ff7800",
-					color: "#000",
-					weight: 1,
-					opacity: 1,
-					fillOpacity: 0.8
-				});
-			}
-		}).addTo(map);
-
-		L.geoJson(freeBus, {
-
-			filter: function (feature, layer) {
-				if (feature.properties) {
-					// If the property "underConstruction" exists and is true, return false (don't render features under construction)
-					return feature.properties.underConstruction !== undefined ? !feature.properties.underConstruction : true;
-				}
-				return false;
-			},
-
-			onEachFeature: onEachFeature
-		}).addTo(map);
-
-		var coorsLayer = L.geoJson(coorsField, {
-
-			pointToLayer: function (feature, latlng) {
-				return L.marker(latlng, {icon: baseballIcon});
-			},
-
-			onEachFeature: onEachFeature
-		}).addTo(map);
-
-	</script>
+<div id="map"></div>
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src="https://cdn.rawgit.com/SatyaRajitha/My-Data/master/sir_data.js" type="text/javascript"></script>
+<script>
+//var map = L.map('map');
+var map = L.map('map').setView([12.82905,80.21630], 17);
+L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
+maxZoom: 18,
+attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+id: 'examples.map-20v6611k'
+}).addTo(map);
+L.geoJson(Building, {
+style: function(feature) {
+switch (feature.properties.Levels) {
+case 'G+5': return {color: "#ff0000"};
+case 'G+7': return {color: "#0000ff"};
+case 'G+4': return {color: "#ff7800"};
+}
+}
+}).addTo(map);;
+function onEachFeature(feature, layer) {
+// does this feature have a property named popupContent?
+if (feature.properties && feature.properties.popupContent) {
+layer.bindPopup(feature.properties.popupContent);
+}
+}
+L.geoJson(Building, {
+onEachFeature: onEachFeature
+}).addTo(map);
+var geojsonMarkerOptions = {
+radius: 8,
+fillColor: "#ff7800",
+color: "#000",
+weight: 1,
+opacity: 1,
+fillOpacity: 0.8
+};
+L.geoJson(Gates, {
+pointToLayer: function (feature, latlng) {
+return L.circleMarker(latlng, geojsonMarkerOptions);
+}
+}).addTo(map);
+</script>
 </body>
 </html>
