--- a/d3test.html
+++ b/d3test.html
@@ -85,7 +85,7 @@
  
     //read in the GeoJSON. This function is asynchronous so
     // anything that needs the json file should be within
-    d3.json("https://raw.githubusercontent.com/SatyaRajitha/My-Data/master/points.geojson", function(collection) {
+    d3.json("https://cdn.rawgit.com/SatyaRajitha/My-Data/master/points.geojson", function(collection) {
  
         // this is not needed right now, but for future we may need
         // to implement some filtering. This uses the d3 filter function
