--- a/points1.html
+++ b/points1.html
@@ -165,7 +165,15 @@
         // better style them. There is probably a better
         // way to do this!
         var originANDdestination = [featuresdata[0], featuresdata[3]]
- 
+        
+        var begend = g.selectAll(".drinks")
+            .data(originANDdestination)
+            .enter()
+            .append("circle", ".drinks")
+            .attr("r", 5)
+            .style("fill", "red")
+            .style("opacity", "1");
+        
         var text = g.selectAll("text")
             .data(originANDdestination)
             .enter()
