--- a/points3.html
+++ b/points3.html
@@ -166,13 +166,14 @@
         // way to do this!
         //var originANDdestination = [featuresdata[0], featuresdata[3]]
         
-        //var begend = g.selectAll(".drinks")
+        <!--var begend = g.selectAll(".drinks")
             .data(originANDdestination)
             .enter()
             .append("circle", ".drinks")
             .attr("r", 5)
             .style("fill", "red")
             .style("opacity", "1");
+         //-->
         
         //var text = g.selectAll("text")
             .data(originANDdestination)
