--- a/points3.html
+++ b/points3.html
@@ -166,26 +166,26 @@
         // way to do this!
         //var originANDdestination = [featuresdata[0], featuresdata[3]]
         
-        <!--var begend = g.selectAll(".drinks")
-            .data(originANDdestination)
-            .enter()
-            .append("circle", ".drinks")
-            .attr("r", 5)
-            .style("fill", "red")
-            .style("opacity", "1");
+        //var begend = g.selectAll(".drinks")
+          //  .data(originANDdestination)
+            //.enter()
+            //.append("circle", ".drinks")
+            //.attr("r", 5)
+            //.style("fill", "red")
+            //.style("opacity", "1");
          //-->
         
         //var text = g.selectAll("text")
-            .data(originANDdestination)
-            .enter()
-            .append("text")
-            .text(function(d) {
-                return d.properties.name
+            //.data(originANDdestination)
+            //.enter()
+            //.append("text")
+            //.text(function(d) {
+            //    return d.properties.name
             })
-            .attr("class", "locnames")
-            .attr("y", function(d) {
-                return -10
-            })
+            //.attr("class", "locnames")
+            //.attr("y", function(d) {
+              //  return -10
+           // })
  
  
         // when the user zooms in or out you need to reset
@@ -211,21 +211,21 @@
             // might get cut off.
  
             //text.attr("transform",
-                function(d) {
-                    return "translate(" +
-                        applyLatLngToLayer(d).x + "," +
-                        applyLatLngToLayer(d).y + ")";
-                });
+             //   function(d) {
+              //      return "translate(" +
+              //          applyLatLngToLayer(d).x + "," +
+               //         applyLatLngToLayer(d).y + ")";
+               // });
  
  
             // for the points we need to convert from latlong
             // to map units
             //begend.attr("transform",
-                function(d) {
-                    return "translate(" +
-                        applyLatLngToLayer(d).x + "," +
-                        applyLatLngToLayer(d).y + ")";
-                });
+               // function(d) {
+                 //   return "translate(" +
+                 //       applyLatLngToLayer(d).x + "," +
+                //        applyLatLngToLayer(d).y + ")";
+              //  });
  
             ptFeatures.attr("transform",
                 function(d) {
