--- a/points2.html
+++ b/points2.html
@@ -63,14 +63,12 @@
     <div id="demo"></div>
     <div id="map"></div>
     <script type="text/javascript">
-    var mapboxTiles = L.tileLayer('https://{s}.tiles.mapbox.com/v3/examples.map-zr0njcqy/{z}/{x}/{y}.png', {
-        attribution: '<a href="http://www.mapbox.com/about/maps/" target="_blank">Terms &amp; Feedback</a>'
-    });
- 
- 
-    var map = L.map('map')
-        .addLayer(mapboxTiles)
-        .setView([12.82905,80.21630], 14);
+    var map = L.map('map').setView([12.82905,80.21630], 16);
+      
+    L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
+			              maxZoom: 18,
+			              id: 'examples.map-20v6611k'
+		         }).addTo(map);
  
  
     // we will be appending the SVG to the Leaflet map pane
